compile and vmFlags